--- a/css/stylePages.css
+++ b/css/stylePages.css
@@ -1,8 +1,7 @@
 body{
     font-family: sans-serif;
     background-color: #33373a;
-    color: azure;
-    margin: 20px;
+    color: white;
 }
 
 h1, h2{
